# fabric

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  api-terms.html  api.html  aup.html  blog.html  disclaimer.html  docker-compose.prod.yml  docker-compose.yml  docs.html  fabric-landing.html  fly.toml  index.html  package-lock.json  package.json  post-clawhub.html  post-mcp-timeline.html  post-trust-index.html  post-trust-scoring.html  privacy.html  provider-terms.html  railway.json  robots.txt  sitemap.xml  terms.html  trust-index.html  vercel.json
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: FabricIdentity.sol  FabricRegistry.sol  IFabricRegistry.sol
contracts/test/: FabricIdentity.t.sol  FabricRegistry.t.sol
dashboard/: .gitignore  next.config.mjs  package-lock.json  package.json  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: api.ts  auth.tsx  events.ts  hooks.ts
monitoring/: prometheus.yml
prisma/: schema.prisma
scripts/: deploy-contracts.sh  deploy-fly.sh  load-test.mjs  preflight.sh  setup-staging.sh  start.sh
sdk/python/: README.md  pyproject.toml
sdk/python/fabric_sdk/: __init__.py  client.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/webmcp/: README.md  index.ts  package.json
src/: config.ts  index.ts
src/db/: client.ts  seed.ts
tests/: billing.test.ts  decay.test.ts  e2e.test.ts  fees.test.ts  mcp.test.ts  payments.test.ts  production.test.ts  routing.test.ts  trust.test.ts  weights.test.ts
(+88 files in other folders)
