[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-sdk"
version = "0.1.0"
description = "Python SDK for the Fabric trust layer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["fabric", "ai", "agents", "trust", "mcp", "x402"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
